example usage heatmaps function

--- a/example_usage.ipynb
+++ b/example_usage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load wsi data\n",
-    "wsi_dir = 'data/exmaple_wsis'\n",
+    "wsi_dir = 'data/example_wsis'\n",
     "wsi_dataset = WSIDataset(img_dir= wsi_dir)\n",
     "wsi_dataloader = DataLoader(wsi_dataset, batch_size = 1, shuffle = False)"
    ]
@@ -42,6 +42,7 @@
     "from rl_benchmarks.models import iBOTViT\n",
     "import pickle\n",
     "\n",
+    "# feature extractor\n",
     "weights_path = 'data/ibot_vit_base_pancan.pth'\n",
     "ibot_base_pancancer = iBOTViT(architecture=\"vit_base_pancan\", encoder=\"teacher\", weights_path=weights_path)\n",
     "ibot_base_pancancer.eval()\n",
@@ -80,15 +81,15 @@
     "                    req_mag = 20,\n",
     "                    feature_extractor = ibot_base_pancancer,\n",
     "                    feature_extractor_transforms = transform,\n",
-    "                    feature_extractor_device:'cpu',\n",
+    "                    feature_extractor_device = 'cpu',\n",
     "                    scorer_model = scores_model,\n",
     "                    scorer_model_device = 'cpu',\n",
     "                    wsi_dataloader = wsi_dataloader, \n",
     "                    postive_tissue_threshold = 1.0,\n",
     "                    num_patches = 'all',\n",
-    "                    min_patch_number: int = 10,\n",
-    "                    feature_batch_size: int = 100,\n",
-    "                    cache_dir: str = 'cache'):"
+    "                    min_patch_number = 10,\n",
+    "                    feature_batch_size = 100,\n",
+    "                    cache_dir = 'cache'):"
    ]
   },
   {
@@ -100,14 +101,14 @@
     "# make and save heatmaps from inference result file\n",
     "def wsi_heatmap(wsi_dataloader,\n",
     "                scores_df,\n",
-    "                col_to_show:str,\n",
-    "                file_col: str,\n",
-    "                outdir:str, \n",
-    "                coord_col_1: str = 'start_coord_0',\n",
-    "                coord_col_2: str = 'start_coord_1',\n",
-    "                patch_size_col:str = 'patch_size',\n",
-    "                display_mag:int = 2,\n",
-    "                cmap:str = 'viridis'):"
+    "                col_to_show,\n",
+    "                file_col,\n",
+    "                outdir, \n",
+    "                coord_col_1 = 'start_coord_0',\n",
+    "                coord_col_2 = 'start_coord_1',\n",
+    "                patch_size_col = 'patch_size',\n",
+    "                display_mag = 2,\n",
+    "                cmap = 'viridis'):"
    ]
   }
  ],
